# service/src/main/resources/api.yml
@@ -151,6 +151,8 @@ paths:
           schema:
             type: string
             format: date
+        - $ref: '#/components/parameters/orderBy'
+        - $ref: '#/components/parameters/limit'
       responses:
         200:
           description: 'OK'
@@ -291,3 +293,17 @@ components:
             type: array
             items:
               $ref: '#/components/schemas/ResponseError'
+
+  parameters:
+    orderBy:
+      name: orderBy
+      in: query
+      description: Field to order by
+      schema:
+        type: string
+    limit:
+      name: limit
+      in: query
+      description: Maximum numbers of returned records
+      schema:
+        type: integer
